# my-wallet-manager

./: .gitignore  README.md  docker-compose.yml
.devcontainer/listener-endpoint/: dev.Dockerfile  devcontainer.json
.devcontainer/listener_endpoint/: dev.Dockerfile  devcontainer.json
.devcontainer/model_trainer/: dev.Dockerfile  devcontainer.json
.devcontainer/streamlit-ui/: dev.Dockerfile  devcontainer.json
.devcontainer/streamlit_ui/: dev.Dockerfile
.github/workflows/: pylint.yml  retrain_model.yml
config/: my-wallet-manager.yml
deployment/listener-endpoint/: Dockerfile
deployment/listener_endpoint/: Dockerfile
deployment/streamlit-ui/: Dockerfile
deployment/streamlit_ui/: Dockerfile
listener-endpoint/: dev.Dockerfile  pyproject.toml
listener-endpoint/deployment/: Dockerfile
listener-endpoint/src/: app.py
listener_endpoint/: README.md  pyproject.toml
listener_endpoint/src/: app.py
model_trainer/: README.md  pyproject.toml
model_trainer/src/: app.py
models/: linearregression.joblib  xgbregressor.joblib
streamlit-ui/: README.md  dev.Dockerfile  pyproject.toml
streamlit-ui/deployment/: Dockerfile
streamlit-ui/src/: app.py  my-wallet-manager.py
streamlit_ui/: README.md  pyproject.toml
streamlit_ui/src/: app.py  my-wallet-manager.py  my_wallet_manager.py
svc-template/src/: app.py
utils/: utils.py
