[tool.poetry]
name = "listener_endpoint"
version = "0.1.0"
description = ""
authors = ["JorgeTarancon <si.jorgetarancon@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pyyaml = "^6.0.1"
gspread = "^6.1.1"
scikit-learn = "^1.5.0"
pandas = "^2.2.2"
numpy = "^1.26.4"
xgboost = "^2.0.3"
joblib = "^1.4.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
