[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["JorgeTarancon <si.jorgetarancon@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.31.1"
pyyaml = "^6.0.1"
gspread = "^6.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
